# prismatic

./: .env  .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs
src/command/: general.rs  handler.rs  mod.rs  music.rs
src/discord/: roles.rs
src/guilds/: data.rs  mod.rs
src/guilds/music/: event.rs  handler.rs  manager.rs  mod.rs  track.rs
src/helper/: embed.rs  emoji.rs  helper.rs  mod.rs  music.rs
src/models/: mod.rs  test.rs
