[package]
name = "prismatic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
diesel = { version = "2.1.4", features = ["sqlite"] }
futures = "0.3.30"
reqwest = "0.11.23"
serde = "1.0.163"
serenity = { version = "0.12.0", default-features = false, features = [
	"client",
	"gateway",
	"rustls_backend",
	"model",
	"standard_framework",
	"voice",
	"cache",
] }
songbird = { git = "https://github.com/serenity-rs/songbird.git" }
invidious = { version = "0.7.4", no-default-features = true, features = [
	"reqwest_async",
] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.8"
dashmap = "5.5.3"
symphonia = { version = "0.5.2", features = ["aac", "mp3", "isomp4", "alac"] }
async-trait = "0.1.77"
